@@ -13,21 +13,21 @@ import cn.hutool.core.convert.AbstractConverter;
  */
 public class URLConverter extends AbstractConverter<URL>{
 
-	@Override
-	protected URL convertInternal(Object value) {
-		try {
-			if(value instanceof File){
-				return ((File)value).toURI().toURL();
-			}
-			
-			if(value instanceof URI){
-				return ((URI)value).toURL();
-			}
-			return new URL(convertToStr(value));
-		} catch (Exception e) {
-			// Ignore Exception
-		}
-		return null;
-	}
+    @Override
+    protected URL convertInternal(Object value) {
+        try {
+            if(value instanceof File){
+                return ((File)value).toURI().toURL();
+            }
+
+            if(value instanceof URI){
+                return ((URI)value).toURL();
+            }
+            return new URL(convertToStr(value));
+        } catch (Exception e) {
+            // Ignore Exception
+        }
+        return null;
+    }
 
 }
